[FIX] align

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -114,7 +114,7 @@ a:hover {
 
 .menu h3 {
   float:         left;
-  margin-top:    0.20em;
+  margin-top:    0.30em;
   font-weight:   400;
   font-size:     26px;
   margin-bottom: 0.0em;
